--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-visually-hidden": "^0.1.4",
-    "next": "12.1.6",
+    "next": "^12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
