--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/react-visually-hidden": "^0.1.4",
     "next": "^12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.10.1"
   },
   "devDependencies": {
     "eslint": "8.17.0",
