--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-visually-hidden": "^0.1.4",
+    "framer-motion": "^6.4.3",
     "next": "^12.1.6",
     "plyr-react": "^3.2.1",
     "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-headroom": "^3.2.0",
+    "react-icons": "^4.4.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
