--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-headroom": "^3.2.0",
     "react-icons": "^4.4.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "eslint": "8.17.0",
